ingress/webapp2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp2
  name: webapp2
  namespace: ingress-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp2
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp2-svc
  name: webapp2-svc
  namespace: ingress-testing
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp2-svc
  type: ClusterIP
status:
  loadBalancer: {}
